@@ -1,1 +1,9 @@
 # ExcelProject
+------------------------------------------------------------------------------------
+1. this is a maven project so install maven after run this project
+
+2. javafx SDK external jars are required to run this project. check this link to find out https://gluonhq.com/products/javafx/
+
+3. Have to add VM Arguments before run. Run As > Run Configuration > Arguments > VM Arguments
+
+4. add this as VM argument  -->   --module-path "\path\to\javafx-sdk-20\lib" --add-modules javafx.controls,javafx.fxml
